# GameOfLifezProject

./: CMakeLists.txt  README  main.c
draw_animation_library/: CMakeLists.txt  board_drawer.c
draw_animation_library/includes/: board_drawer.h
game_library/: CMakeLists.txt  board.c  game_circular.c  game_clipped.c
game_library/includes/: board.h  game_circular.h  game_clipped.h
tests/: test.c
